# draughts

./: .gitignore  Makefile  README.md  draughts.cabal  stack.yaml
src/: Schema.hs  Server.hs  UI.hs
src/Draughts/: Game.hs
